# BNM-Android

./: CMakeLists.txt  CMakePresets.json  main.cpp
.github/workflows/: main.yml
ByNameModding/: BNM.cpp  BNM_settings.hpp
